--- a/src/languages/ifttt-instagram-gallery.pot
+++ b/src/languages/ifttt-instagram-gallery.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: ifttt-instagram-gallery 1.0.0\n"
+"Project-Id-Version: ifttt-instagram-gallery 0.9.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-14 03:01+0700\n"
+"POT-Creation-Date: 2014-06-14 15:30+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -114,5 +114,5 @@ msgstr ""
 
 
 #: Project description
-msgid "When using IFTTT with WordPress you can just post new posts. This plugin helps you to do whatever you like. Configure your IFTTT job in a predefined way in you get any information you like in a WordPress action."
+msgid "Loads Instagram images into the blog triggered by IFTTT and the ifttt-wordpress-bridge action"
 msgstr ""
